--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
 
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- text content -->
              <div>
                 <h1 class="text-5xl md:text-7xl">
@@ -85,7 +85,7 @@
              </div>
 
              <!-- grid cards -->
-              <div class="grid grid-cols-4 gap-6 text-center">
+              <div class="grid girid-cols-1 md:grid-cols-4 gap-6 text-center">
 
                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
                 <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
@@ -124,7 +124,47 @@
                 </div>
 
               </div>
-              
+            
+            <!-- Great Tea Section -->
+             <section  class="mt-20">
+                <div class="grid grid-cols-1 lg:grid-cols-2">
+                    <!-- image section -->
+                     <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+                        <div class="h-38 bg-gradient-to-r from-red-100 to to-red-50 rounded-xl">
+                        </div>
+
+                        <div class="bg-orange-50 rounded-xl row-span-2">
+                            <img class="mx-auto" src="./images/fresh-1.png" alt="">
+                        </div>
+
+                        <div class="bg-stone-100 rounded-xl row-span-2">
+                            <img class="mx-auto" src="./images/fresh-2.png" alt="">
+                        </div>
+
+                        <div class="h-38 bg-gradient-to-r from-stone-200 to to-stone-100 rounded-xl">
+                        </div>
+                     </div>
+
+                     <!-- text section -->
+                      <div>
+                        <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                        <p class="text-gray-500 ">
+                            The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+                        </p>
+                        <br>
+                        <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+                        <p class="text-gray-500 ">
+                            A Unique and different style from other teapots gives a luxurious and minimalist impression
+                        </p>
+                        <br>
+                        <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+                        <p class="text-gray-500 ">
+                            Premium Quality that makes tea more elegant and more durable when you use it.
+                        </p>
+                      </div>
+                </div>
+             </section>
+
          </section>
     </main>
 </body>
